# archiver

./: .gitignore  README.md
client/: CMakeLists.txt
client/src/: main.cpp  main_window.cpp  main_window.h  network_worker.cpp  network_worker.h
client/tests/: main_window_test.cpp
server/: CMakeLists.txt
server/src/: main.cpp
server/src/compressor/: compressor.cpp  compressor.h
server/src/factory/: factory.cpp  factory.h
server/src/processor/: processor.cpp  processor.h
server/src/server/: server.cpp  server.h
server/src/server/request/: multipart_parser.cpp  multipart_parser.h  request_handler.cpp  request_handler.h  request_params.cpp  request_params.h
server/src/writer/: writer.cpp  writer.h
server/tests/: test_factory.cpp  test_processor.cpp  test_request_params.cpp  test_writer.cpp
